lab1/Test/L1-A-7-70.output
Error Type A at Line 4
Error Type A at Line 11
Error Type A at Line 24
Error Type A at Line 30
Error Type A at Line 41
