lab1/Test/L1-A-7-70.cmm
int ABT7oc ( ) {
  float YuNndpl [ 1374411094 ] = _n3_uZQihdvE2 = fMdi 
    || pM && ZVYqnKduuvO > it7DKT * - ! ! sLGjCcM2xXTSYM1LuKx 
    ( teZrf2V <= epI3fN7Gf $- V5AbhfeEcIKvAiHZ * rhzIN_DI2J2D1Tp0Xt9O 
    [ EM1iwaH9SVt6Q >= - JfXqBItz0tTTe ( aAmvOwiyG , QFlSY4tCkg6 
    || iOgAGb4J < KsuZOUvIhLaMal_Rq ( WgWt6FD6DgcgNgS 
    && RvwKLYhpa - ( vB40Fa1 = qVipC0X != qJSL1efPDrmfJ8T 
    ) ) ) * 2002648656.189375847 == v1W2slHMooudOw . GsAeFXKc 
    ] ) + ! - ! yPJHvG5wfi8 ( ) / 1068332476 , A0 ;
}
struct #{
  struct l6A8LketM4LuHSN {
    struct W08VQe9WFSu W_F2hZkJiAaWh ;
  }RcB7VGcVQ ;
};
struct LkGzb0Di_kWAjjesK q8yPlBnPbVU3SgvF 
;
int FJzowm4cxmoVP9R ( int GGX6OYaplQbx ) {
  igOASXmJ7iS9eDvX_TT ;
}
int TQpQAFHcO , C 

;
int Z7nwymVwny_LsvGsvzh ( int m0_ , int Ad69 %) {
}
int ;
int ;
int bwa8jzZ3J2OpZ5FzkeC ( ) {
}
int dkaJvAeyrpVQUHKxMmE :( ) {
  if ( f9Hdm265FiUUVNru5Po )   if ( POMjtt )   FcJhpje46nJ4_9 
    ;
else   while ( SMygbTdt )   X ;


else   if ( u8epF35euCAxTEPSiG ) {
    return L ;
  }

}
%